added app travel-agent

--- a/_notebooks/openai_basics.ipynb
+++ b/_notebooks/openai_basics.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "53100e3a",
+   "metadata": {},
+   "source": [
+    "# Reference\n",
+    "https://openai.github.io/openai-agents-python/\n",
+    "\n",
+    "https://openai.github.io/openai-agents-python/quickstart/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0533c0db",
    "metadata": {},
    "source": [
-    "# Async Python (asyncio package)\n",
+    "# Async Python (asyncio package)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98373e0b",
+   "metadata": {},
+   "source": [
     "\n",
     "Async Python is light-weight alternative to threading or multiprocessing. \n",
     "\n",
@@ -23,25 +41,13 @@
     "```\n",
     "\n",
     "```python\n",
-    "# It returns result list\n",
+    "# It runs multiple coroutines in parallel and returns result list\n",
     "results = await asyncio.gather(\n",
     "    do_something(),\n",
     "    do_something2(),\n",
     "    do_something3()\n",
     ")\n",
-    "```\n",
-    "\n",
-    "# Core Concepts\n",
-    "- **Agents**, which are LLMs equipped with instructions (or system prompts) and tools.\n",
-    " (OpenAI Agents SDK adopts a more modular and flexible approach)\n",
-    "\n",
-    "- **Handoffs**, which allow agents to delegate to other agents for specific tasks\n",
-    "\n",
-    "- **Guardrails**, which enable validation of agent inputs and outputs\n",
-    "\n",
-    "- **Sessions**, which automatically maintains conversation history across agent runs\n",
-    "\n",
-    "\n"
+    "```"
    ]
   },
   {
@@ -49,7 +55,14 @@
    "id": "16870888",
    "metadata": {},
    "source": [
-    "# Cheetsheet for Agentic Frameworks\n",
+    "# OpenAI SDK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eede9725",
+   "metadata": {},
+   "source": [
     "\n",
     "## Setting up LLM Keys\n",
     "```python\n",
@@ -60,9 +73,8 @@
     "groq_api_key = os.getenv('GROQ_API_KEY')\n",
     "```\n",
     "\n",
-    "## OpenAI SDK\n",
     "\n",
-    "### Chatting with OpenAI\n",
+    "## Chatting with OpenAI\n",
     "\n",
     "```python\n",
     "request = \"Please come up with a challenging, nuanced question that I can ask a number of LLMs to evaluate their intelligence. \"\n",
@@ -78,7 +90,7 @@
     "print(question)\n",
     "```\n",
     "\n",
-    "### Chatting with Gemenai\n",
+    "## Chatting with Gemenai\n",
     "\n",
     "```python\n",
     "gemini = OpenAI(api_key=google_api_key, base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\")\n",
@@ -88,7 +100,7 @@
     "answer = response.choices[0].message.content\n",
     "```\n",
     "\n",
-    "### Chatting with Groq\n",
+    "## Chatting with Groq\n",
     "\n",
     "```python\n",
     "groq = OpenAI(api_key=groq_api_key, base_url=\"https://api.groq.com/openai/v1\")\n",
@@ -98,7 +110,7 @@
     "answer = response.choices[0].message.content\n",
     "```\n",
     "\n",
-    "### Chatting with Ollama (llm running locally)\n",
+    "## Chatting with Ollama (llm running locally)\n",
     "\n",
     "```python\n",
     "ollama = OpenAI(base_url='http://localhost:11434/v1', api_key='ollama')\n",
@@ -108,11 +120,72 @@
     "answer = response.choices[0].message.content\n",
     "```\n",
     "\n",
-    "--------\n",
+    "--------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa04a2e6",
+   "metadata": {},
+   "source": [
+    "# Open AI Agent Core Components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "650ff3f9",
+   "metadata": {},
+   "source": [
+    "https://openai.github.io/openai-agents-python/agents/\n",
     "\n",
-    "## OpenAI SDK for Agents\n",
+    "- **Agents**, which are LLMs equipped with instructions (or system prompts) and tools.\n",
+    " (OpenAI Agents SDK adopts a more modular and flexible approach)\n",
     "\n",
-    "### Define an Agent with OpenAI LLM\n",
+    "- **Handoffs**, which allow agents to delegate to other agents for specific tasks\n",
+    "\n",
+    "- **Guardrails**, which enable validation of agent inputs and outputs\n",
+    "\n",
+    "- **Sessions**, which automatically maintains conversation history across agent runs\n",
+    "\n",
+    "- **Context**, s a dependency-injection tool: it's an object you create and pass to Runner.run(), that is passed to every agent, tool, handoff etc, and it serves as a grab bag of dependencies and state for the agent run.\n",
+    "\n",
+    "- **Output types**: By default, agents produce plain text (i.e. str) outputs. If you want the agent to produce a particular type of output, you can use the output_type parameter. \n",
+    "\n",
+    "- **Multi-agent Design Patterns**: There are 2 broadly used patterns:\n",
+    "    1. Manager (agents as tools): A central manager/orchestrator invokes specialized sub‑agents as tools and retains control of the conversation.\n",
+    "\n",
+    "    2. Handoffs: Peer agents hand off control to a specialized agent that takes over the conversation. This is decentralized.\n",
+    "\n",
+    "- **model_settings**, is an agent parameter that forces LLM to use tools. (options: auto, required, none)\n",
+    "\n",
+    "- **Tool Use Behavior**: The tool_use_behavior parameter in the Agent configuration controls how tool outputs are handled:\n",
+    "    1. \"run_llm_again\": The default. Tools are run, and the LLM processes the results to produce a final response.\n",
+    "\n",
+    "    2. \"stop_on_first_tool\": The output of the first tool call is used as the final response, without further LLM processing.\n",
+    "\n",
+    "    3. StopAtTools(stop_at_tool_names=[...]): Stops if any specified tool is called, using its output as the final response.\n",
+    "\n",
+    "    4. ToolsToFinalOutputFunction: A custom function that processes tool results and decides whether to stop or continue with the LLM.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bdd9dce",
+   "metadata": {},
+   "source": [
+    "# OpenAI SDK for Agents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d364952f",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Define an Agent with OpenAI LLM\n",
     "```python\n",
     "# Defining an Agent\n",
     "agent1 = Agent(\n",
@@ -127,7 +200,7 @@
     "\n",
     "```\n",
     "\n",
-    "### Invoking an Agent\n",
+    "## Invoking an Agent\n",
     "```python\n",
     "with trace(\"tracing1\"):\n",
     "    result = await Runner.run(agent1, \"tell a joke about automation AI agents\")\n",
@@ -147,7 +220,7 @@
     "    print(output + \"\\n\\n\"   \n",
     "```\n",
     "\n",
-    "### Defining a tool\n",
+    "## Defining a tool\n",
     "```python\n",
     "# convert a function to a tool\n",
     "@funtion_tool\n",
@@ -163,21 +236,19 @@
     "tools = [tool1, tool2, tool3, something] #this becomes the array of tools that you can pass to an agent\n",
     "\n",
     "\n",
-    "```\n",
-    "\n",
-    "### Define an Agent with non-OpenAI LLM\n",
-    "\n",
-    "```python\n",
-    "\n",
-    "```\n",
-    "\n",
-    "## OpenAI SDK for CrewAI"
+    "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "agents",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
