--- a/_notebooks/langchain_basics.ipynb
+++ b/_notebooks/langchain_basics.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "bbfcadef",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,10 +83,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/azureuser/ws/agenticaiprojects/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "answer is: The capital of France is Paris.\n"
+      "answer is: The capital city of France is Paris.\n"
      ]
     }
    ],
@@ -203,7 +211,7 @@
      "output_type": "stream",
      "text": [
       "<class 'langchain_core.messages.ai.AIMessage'>\n",
-      "AI Message looks like: content=\"J'adore programmer.\" additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 6, 'prompt_tokens': 22, 'total_tokens': 28, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-CdF5Q00vSvF2xo2LHnPAhApA6pk8f', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='lc_run--d96f890f-4e14-4bdb-9d56-b800cee82e0b-0' usage_metadata={'input_tokens': 22, 'output_tokens': 6, 'total_tokens': 28, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
+      "AI Message looks like: content=\"J'adore programmer.\" additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 6, 'prompt_tokens': 22, 'total_tokens': 28, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_provider': 'openai', 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-Cehqj8igiqJiwFXYnwDmLo6XNBogz', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None} id='lc_run--01d1c237-e058-4761-8a17-3cee6937724f-0' usage_metadata={'input_tokens': 22, 'output_tokens': 6, 'total_tokens': 28, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}\n"
      ]
     }
    ],
@@ -265,7 +273,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "answer is: J'aime la programmation.\n"
+      "answer is: J'adore programmer.\n"
      ]
     }
    ],
